<resources>
    <string name="app_name">Chicken Fly</string>
    <string name="sign_in_to_access_your_account">Sign in to access your account</string>
    <string name="type_e_mail_address">Type E-Mail address</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_here"><u>Signup here</u></string>
    <string name="registration">Registration</string>
    <string name="full_name">Full name</string>
    <string name="age">age</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_profile_picture">choose profile picture</string>
    <string name="sign_up">Sign up</string>
    <string name="profilepic">profilepic</string>
    <string name="company_registration">Company Registration</string>
    <string name="company_name">Company Name</string>
    <string name="password">password</string>
    <string name="consumer_registration">Consumer Registration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
