<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/company_registration"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/company_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/companyAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="Company Address"
        android:inputType="textVisiblePassword"

        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <EditText
        android:id="@+id/companyEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/companyAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/companyAddress"
        app:layout_constraintTop_toBottomOf="@+id/companyAddress" />


    <EditText
        android:id="@+id/companyPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/companyEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/companyEmail"
        app:layout_constraintTop_toBottomOf="@+id/companyEmail" />

    <EditText
        android:id="@+id/companyCpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword"
        android:textColor="#000000"

        app:layout_constraintEnd_toEndOf="@+id/companyPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/companyPassword"
        app:layout_constraintTop_toBottomOf="@+id/companyPassword" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/companyCpassword"
        app:layout_constraintStart_toStartOf="@+id/companyCpassword"
        app:layout_constraintTop_toBottomOf="@+id/companyCpassword">

        <Button
            android:id="@+id/choosepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/choose_profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilepic" />

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@drawable/assistant"
            android:contentDescription="@string/profilepic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/companySignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</android.support.constraint.ConstraintLayout>
